--- a/落落人间/山外山.md
+++ b/落落人间/山外山.md
@@ -1,13 +1,13 @@
 # 落落
-  少落落之所以叫少落落，是因为她像是落在人间的萝莉。
+  芍落落之所以叫少落落，是因为她像是落在人间的少女。
   
-  少落落自从那次醒来，就生活在了山外山，这座山叫山外山。
+  芍落落自从那次醒来，就生活在了山外山，这座山叫山外山。
 
-  不过更多时候，大家都叫它，红岚。
+  不过更多时候，都叫它，红岚。
   ```
   繁枝不剪落影花 
   弦铮欲提 
   俏面迎风她何家  
   红岚梦里
   ```
-  千万年前，以乐证道的那位便是出自红岚。
+  千万年前，证道的那位便是出自红岚。
